--- a/New folder/package.json
+++ b/New folder/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@searchkit/sdk": "^3.0.0",
-    "cross-fetch": "^3.1.5"
+    "cross-fetch": "^3.1.5",
+    "util": "^0.12.5"
   }
 }
